Avoid testing a possibly uninitialized errno value when using -exit. Closes PR 44973 (change is a somewhat more principled equivalent of the patch suggested there) although I cannot replicate the reported behavior unless I explicitly prepare errno with a nonzero value before the fts_read loop.