usr.bin/find/find.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: find.c,v 1.27 2010/12/28 15:28:31 christos Exp $	*/
+/*	$NetBSD: find.c,v 1.28 2012/03/18 17:09:46 dholland Exp $	*/
 
 /*-
  * Copyright (c) 1991, 1993, 1994
@@ -37,7 +37,7 @@
 #if 0
 static char sccsid[] = "from: @(#)find.c	8.5 (Berkeley) 8/5/94";
 #else
-__RCSID("$NetBSD: find.c,v 1.27 2010/12/28 15:28:31 christos Exp $");
+__RCSID("$NetBSD: find.c,v 1.28 2012/03/18 17:09:46 dholland Exp $");
 #endif
 #endif /* not lint */
 
@@ -258,7 +258,7 @@ find_execute(PLAN *plan, char **paths)
 	}
 
 	sig_unlock(&s);
-	if (errno)
+	if (g_entry == NULL && errno)
 		err(1, "fts_read");
 	(void)fts_close(tree);
 
